rnsc/test_data/integration/error/parser/type_hints/int/float_recovers.rns
.class @int 3.14
unexpected_token ; <- this error should be reported as well
